# TuneNeutral

./: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yaml  picture.psd  settings.gradle
.github/: dependabot.yml
.github/workflows/: dev.workflow.yaml
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/res/animator/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: background_border.xml  bottom_navigation_selector.xml  date_border.xml  ic_audiotrack_24px.xml  ic_bar_chart_24px.xml  ic_bug_report_24px.xml  ic_library_music_24px.xml  today_date_border.xml  (+2 more)
app/src/main/res/drawable-v24/: this_month_background_border.xml
backend/: .gitignore  Cargo.toml  go.mod  go.sum
backend/cmd/: main.go
backend/pkg/api/: api.go  api_test.go
backend/pkg/config/: config.go
backend/pkg/db/: db.go
backend/pkg/models/: models.go
backend/pkg/router/: router.go
backend/pkg/tune/: tune.go
backend/src/: filters.rs  handlers.rs  main.rs  models.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue  index.d.ts  main.ts  models.ts  version.ts
frontend/src/assets/: icon.psd
frontend/src/components/: About.vue  AddToQueue.vue  CreatePlaylist.vue  CreateUser.vue  Logout.vue  PlaylistView.vue  PlaylistsView.vue  TrackView.vue
frontend/src/router/: index.ts
frontend/src/scss/: core.scss
frontend/src/views/: Home.vue  MyData.vue  NewMood.vue  Playlist.vue  Playlists.vue
gradle/wrapper/: gradle-wrapper.properties
(+78 files in other folders)
