[package]
name = "tunenetual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
pretty_env_logger = "0.4"
serde_derive = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
rspotify = {version = "0.11.3", features = ["client-reqwest", "reqwest-default-tls", "cli"]}
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ["v4", "serde"]}
futures-util = "0.3.18"